address some findbugs issues